# tool-attention-mcp

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  scripts_benchmark.py
examples/: eval_cases.json  mcp_smoke.sh  openclaw-mcp-snippet.json  rank_input.json
src/tool_attention_mcp/: __init__.py  adapter_tool_attention.py  cli.py  config.py  models.py  scorer_fallback.py  scorer_ollama.py  scorer_semantic.py  server.py  service.py
tests/: test_benchmark_script.py  test_fallback_ranker.py  test_semantic_ranker.py  test_service_contract.py
