[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-attention-mcp"
version = "0.1.0"
description = "MCP server + CLI wrapper for tool-attention style tool ranking"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "ta"}]
dependencies = []

[project.scripts]
tool-attention-mcp = "tool_attention_mcp.server:main"
tool-attention-cli = "tool_attention_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
